Cool table border

--- a/src/main/resources/templates/cars.html
+++ b/src/main/resources/templates/cars.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<table>
+<table border=1 bordercolor="black">
     <thead>
     <tr>
         <th> id </th>
